--- a/includes/header.inc.html
+++ b/includes/header.inc.html
@@ -27,6 +27,11 @@
               <li><a href="apparel.html">Apparel</a></li>
             </ul>
           </li>
+          <li><a href="#">Art</a>
+            <ul>
+              <li><a href="water-colors.html">Water Colors</a></li>
+            </ul>
+          </li>               
           <li><a href="#">Me</a>
             <ul>
               <li><a href="about.html">About</a></li>
