--- a/includes/header.inc.html
+++ b/includes/header.inc.html
@@ -3,7 +3,7 @@
       <div class="nav w-100 float-left">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="#">Sketches</a>
+          <li><a href="#">Sketch</a>
             <ul>
               <li><a href="sketches.html">Sketchbook</a></li>
               <li><a href="lyn-devon.html">Lyn Devon</a></li>
@@ -20,7 +20,7 @@
               <li><a href="polo-sport.html">Polo Sport</a></li>
             </ul>
           </li>
-          <li><a href="#">Made in New York</a>
+          <li><a href="#">Create</a>
             <ul>
               <li><a href="stanton-street-collection.html">Stanton Street Collection</a></li>
               <li><a href="hand-knits.html">Hand Knits</a></li>
@@ -43,7 +43,7 @@
       <div id="mySidenav" class="sidenav"> <a href="javascript:void(0)" class="closebtn" onClick="closeNav()">&times;</a>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Sketches</a>
+          <li><a href="#">Sketch</a>
             <ul>
               <li><a href="sketches.html">Sketchbook</a></li>
               <li><a href="lyn-devon.html">Lyn Devon</a></li>
@@ -60,7 +60,7 @@
               <li><a href="polo-sport.html">Polo Sport</a></li>
             </ul>
           </li>
-          <li><a href="#">Made in New York</a>
+          <li><a href="#">Create</a>
             <ul>
               <li><a href="stanton-street-collection.html">Stanton Street Collection</a></li>
               <li><a href="hand-knits.html">Hand Knits</a></li>
