--- a/includes/header.inc.html
+++ b/includes/header.inc.html
@@ -14,7 +14,7 @@
           <li><a href="#">Design</a>
             <ul>
               <li><a href="talbots-accessories-swim.html">Talbots Accessories & Swim</a></li>
-              <li><a href="talbots-home-goods.html">Talbots Home Goods</a></li>
+              <li><a href="talbots-home-goods.html">Talbots Home & Sleep</a></li>
               <li><a href="lauren-ralph-lauren.html">Lauren Ralph Lauren</a></li>
               <li><a href="active-lauren-ralph-lauren.html">Active Lauren Ralph Lauren</a></li>
               <li><a href="polo-sport.html">Polo Sport</a></li>
@@ -54,7 +54,7 @@
           <li><a href="#">Design</a>
             <ul>
               <li><a href="talbots-accessories-swim.html">Talbots Accessories & Swim</a></li>
-              <li><a href="talbots-home-goods.html">Talbots Home Goods</a></li>
+              <li><a href="talbots-home-goods.html">Talbots Home & Sleep</a></li>
               <li><a href="lauren-ralph-lauren.html">Lauren Ralph Lauren</a></li>
               <li><a href="active-lauren-ralph-lauren.html">Active Lauren Ralph Lauren</a></li>
               <li><a href="polo-sport.html">Polo Sport</a></li>
