--- a/includes/header.inc.html
+++ b/includes/header.inc.html
@@ -6,7 +6,7 @@
           <li><a href="#">Sketch</a>
             <ul>
               <li><a href="sketches.html">Sketchbook</a></li>
-              <li><a href="lyn-devon.html">Lyn Devon</a></li>
+              <li><a href="for-lyn-devon.html">Lyn Devon</a></li>
               <li><a href="as-seen-in.html">As Seen In</a></li>
               <li><a href="mini-projects.html">Mini Projects</a></li>
             </ul>
@@ -45,7 +45,7 @@
           <li><a href="#">Sketch</a>
             <ul>
               <li><a href="sketches.html">Sketchbook</a></li>
-              <li><a href="lyn-devon.html">Lyn Devon</a></li>
+              <li><a href="for-lyn-devon.html">Lyn Devon</a></li>
               <li><a href="as-seen-in.html">As Seen In</a></li>
               <li><a href="mini-projects.html">Mini Projects</a></li>
             </ul>
