--- a/includes/header.inc.html
+++ b/includes/header.inc.html
@@ -30,6 +30,7 @@
           <li><a href="#">Art</a>
             <ul>
               <li><a href="water-colors.html">Water Colors</a></li>
+              <li><a href="digital.html">Digital</a></li> 
             </ul>
           </li>               
           <li><a href="#">Me</a>
