--- a/includes/header.inc.html
+++ b/includes/header.inc.html
@@ -29,8 +29,8 @@
           </li>
           <li><a href="#">Art</a>
             <ul>
-              <li><a href="water-colors.html">Water Colors</a></li>
-              <li><a href="digital.html">Digital</a></li> 
+              <li><a href="paintings.html">Paintings</a></li>
+              <li><a href="stationery.html">Stationery</a></li> 
             </ul>
           </li>               
           <li><a href="#">Me</a>
@@ -69,7 +69,8 @@
           </li>
           <li><a href="#">Art</a>
             <ul>
-              <li><a href="water-colors.html">Water Colors</a></li>
+              <li><a href="paintings.html">Paintings</a></li>
+              <li><a href="stationery.html">Stationery</a></li>
             </ul>
           </li>              
           <li><a href="#">Me</a>
