--- a/includes/header.inc.html
+++ b/includes/header.inc.html
@@ -16,7 +16,7 @@
               <li><a href="talbots-accessories-swim.html">Talbots Accessories & Swim</a></li>
               <li><a href="talbots-home-goods.html">Talbots Home & Sleep</a></li>
               <li><a href="lauren-ralph-lauren.html">Lauren Ralph Lauren</a></li>
-              <li><a href="l-rl.html">L-RL</a></li>
+              <li><a href="l-rl.html">L RL</a></li>
               <li><a href="polo-sport.html">Polo Sport</a></li>
             </ul>
           </li>
@@ -56,7 +56,7 @@
               <li><a href="talbots-accessories-swim.html">Talbots Accessories & Swim</a></li>
               <li><a href="talbots-home-goods.html">Talbots Home & Sleep</a></li>
               <li><a href="lauren-ralph-lauren.html">Lauren Ralph Lauren</a></li>
-              <li><a href="l-rl.html">L-RL</a></li>
+              <li><a href="l-rl.html">L RL</a></li>
               <li><a href="polo-sport.html">Polo Sport</a></li>
             </ul>
           </li>
