--- a/includes/header.inc.html
+++ b/includes/header.inc.html
@@ -13,8 +13,7 @@
           </li>
           <li><a href="#">Design</a>
             <ul>
-              <li><a href="talbots-accessories-swim.html">Talbots Accessories & Swim</a></li>
-              <li><a href="talbots-home-goods.html">Talbots Home & Sleep</a></li>
+                  <li><a href="talbots.html">Talbots</a></li>
               <li><a href="lauren-ralph-lauren.html">Lauren Ralph Lauren</a></li>
               <li><a href="l-rl.html">L RL</a></li>
               <li><a href="polo-sport.html">Polo Sport</a></li>
@@ -22,7 +21,7 @@
           </li>
           <li><a href="#">Create</a>
             <ul>
-                  <li><a href="stanton-street-collection.html">Stanton Street Collection</a></li>
+                  <li><a href="hand-knits.html">Hand Knits</a></li>
               <li><a href="apparel.html">Apparel</a></li>
             </ul>
           </li>
@@ -52,8 +51,7 @@
           </li>
           <li><a href="#">Design</a>
             <ul>
-              <li><a href="talbots-accessories-swim.html">Talbots Accessories & Swim</a></li>
-              <li><a href="talbots-home-goods.html">Talbots Home & Sleep</a></li>
+              <li><a href="talbots.html">Talbots</a></li>
               <li><a href="lauren-ralph-lauren.html">Lauren Ralph Lauren</a></li>
               <li><a href="l-rl.html">L RL</a></li>
               <li><a href="polo-sport.html">Polo Sport</a></li>
@@ -61,7 +59,7 @@
           </li>
           <li><a href="#">Create</a>
             <ul>
-                  <li><a href="stanton-street-collection.html">Stanton Street Collection</a></li>
+                  <li><a href="hand-knits.html">Hand Knits</a></li>
               <li><a href="apparel.html">Apparel</a></li>
             </ul>
           </li>
