--- a/includes/header.inc.html
+++ b/includes/header.inc.html
@@ -5,10 +5,10 @@
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#">Sketch</a>
             <ul>
-              <li><a href="sketches.html">Sketchbook</a></li>
+              <li><a href="sketchbook.html">Sketchbook</a></li>
+              <li><a href="illustrated-projects.html">Illustrated Projects</a></li>
               <li><a href="for-lyn-devon.html">For Lyn Devon</a></li>
               <li><a href="as-seen-in.html">As Seen In</a></li>
-              <li><a href="mini-projects.html">Mini Projects</a></li>
             </ul>
           </li>
           <li><a href="#">Design</a>
@@ -43,10 +43,10 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="#">Sketch</a>
             <ul>
-              <li><a href="sketches.html">Sketchbook</a></li>
+              <li><a href="sketchbook.html">Sketchbook</a></li>
+              <li><a href="illustrated-projects.html">Illustrated Projects</a></li>
               <li><a href="for-lyn-devon.html">For Lyn Devon</a></li>
               <li><a href="as-seen-in.html">As Seen In</a></li>
-              <li><a href="mini-projects.html">Mini Projects</a></li>
             </ul>
           </li>
           <li><a href="#">Design</a>
