--- a/includes/header.inc.html
+++ b/includes/header.inc.html
@@ -28,6 +28,7 @@
           <li><a href="#">Art</a>
             <ul>
               <li><a href="paintings.html">Paintings</a></li>
+              <li><a href="prints.html">Prints</a></li>
               <li><a href="stationery.html">Stationery</a></li> 
             </ul>
           </li>               
@@ -66,6 +67,7 @@
           <li><a href="#">Art</a>
             <ul>
               <li><a href="paintings.html">Paintings</a></li>
+              <li><a href="prints.html">Prints</a></li>
               <li><a href="stationery.html">Stationery</a></li>
             </ul>
           </li>              
