--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,9 @@ a:hover {text-decoration:none;}
 .sticky .nav{ padding:17px 0;}
 
 .main_content{ background-color:#fff; margin-top:190px; padding:75px;}
-#menu-content{margin-top:160px;}
-.logo{ padding:20px 0;}
-.nav{ background-color:#f3f3f3;padding:25px 0;}
+#menu-content{margin-top:105px;}
+.logo{ padding:10px 0;}
+.nav{ background-color:#7c4444;padding:10px 0;}
 .nav ul, .nav ul li{ width:100%; float:none; display:inline-block; text-align:center;}
 .nav ul li{ width:auto; position:relative;}
 .nav ul li a{ width:100%; float:left;color:#343434;padding:0 20px; font-size:13px; line-height:30px; text-transform:uppercase;letter-spacing: .05em; cursor:pointer;}
@@ -47,7 +47,7 @@ a:hover {text-decoration:none;}
 #menu-content {opacity: 0;position: relative;filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);-webkit-transition: opacity .3s ease-out;-moz-transition: opacity .3s ease-out;-o-transition: opacity .3s ease-out;transition: opacity .3s ease-out;}
 #menu-content.show {opacity: 1;filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);}
 #subMenu{ background-color:#f3f3f3;}
-#subMenu ul{ width:100%; display:inline-block;text-align: center;padding:25px 0;line-height:1em;}
+#subMenu ul{ width:100%; display:inline-block;text-align: center;padding:15px 0;line-height:1em;}
 #subMenu ul li { width:auto; float:none;display: inline-block;margin:0;font-weight: 400;font-size:13px;letter-spacing:.05em;text-transform:uppercase;line-height:1em;}
 #subMenu ul li a{ width:100%; float:left;padding:0 15px; color:#343434}
 .nav ul li.active a, .nav ul li:hover ul li.active a, #subMenu ul li.active a{ color:#999;}
