--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ a:hover {text-decoration:none;}
 .main_content{ background-color:#fff; margin-top:190px; padding:75px;}
 #menu-content{margin-top:105px;}
 .logo{ padding:10px 0;}
-.nav{ background-color:#7c4444;padding:10px 0;}
+.nav{ background-color:#f3f3f3;padding:10px 0;}
 .nav ul, .nav ul li{ width:100%; float:none; display:inline-block; text-align:center;}
 .nav ul li{ width:auto; position:relative;}
 .nav ul li a{ width:100%; float:left;color:#343434;padding:0 20px; font-size:13px; line-height:30px; text-transform:uppercase;letter-spacing: .05em; cursor:pointer;}
