--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
 @charset "utf-8";
 /* CSS Document */
 
-body {font-family: 'Open Sans', sans-serif;color:#343434; font-size:14px; line-height:1em;letter-spacing: .02em; font-weight:400; background-color:#f9f9f9}
+body {font-family: 'Open Sans', sans-serif;color:#343434; 
+    font-size:14px; 
+    line-height:1em;letter-spacing: .02em; 
+    font-weight:400; 
+    overflow:hidden;
+    background-color:#f9f9f9}
 img {width:100%; height:auto;}
 ul {margin:0; padding:0;}
 ul li {list-style:none; float:left;}
